<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">2048游戏</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="score">分数：</string>
    <string name="bestscore">最高分：</string>
    <string name="newgame">重新开始</string>
    <string name="appinfo">2048游戏 v1.72，作者：William Wang</string>
    <string name="gamemode">模式选择：</string>
    <string name="gameInfo">游戏介绍</string>
    <string name="Undo">撤销</string>

</resources>
