<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!--stretchColumns 设置三列都可以拉伸-->
    <TableLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Switch
                android:id="@+id/modeSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="2048模式"
                android:textOn="无限模式"
                android:text="@string/gamemode"/>
        </TableRow>
    </TableLayout>

    <FrameLayout
        android:id="@+id/gameContainer"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <com.william.game2048.GameView
            android:id="@+id/gameView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
        </com.william.game2048.GameView>

        <com.william.game2048.AnimLayer
            android:id="@+id/animLayer"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
        </com.william.game2048.AnimLayer>

    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tvScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bestscore"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tvBestScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:stretchColumns="0,1,2"
        android:orientation="horizontal">
        <TableRow>
            <Button
                android:id="@+id/btnNewGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newgame">
            </Button>
            <Button
                android:id="@+id/btnUndo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Undo"/>
            <Button
                android:id="@+id/btngameInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/gameInfo"/>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/authorName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/appinfo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>